# cloud_final_project

./: Cargo.toml  README.md  compose.yaml
.github/workflows/: docker-image-backend.yml  docker-image-frontend.yml  docker-image_frontend.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  cargo.toml  client.py  requirements.txt
frontend/src/: lib.rs
frontend/ui/: sidebar.md
k8s/: backend.yaml  frontend.yaml  fullstack_deployment.yaml
